# memcached-network-types

./: Cargo.toml  README.md
.github/workflows/: rust-ci.yml
docs/: crates.js  help.html  search-index.js  settings.html  src-files.js
docs/memcached_network_types/: all.html  index.html  macro.integer_enum!.html  macro.integer_enum.html  macro.integer_enum_variant_constants!.html  macro.integer_enum_variant_constants.html  sidebar-items.js
docs/memcached_network_types/binary/: enum.DataType.html  enum.Opcode.html  enum.ReqMagicByte.html  enum.ResMagicByte.html  enum.ResponseStatus.html  index.html  sidebar-items.js  struct.PacketHeader.html  struct.ReqPacketHeader.html  struct.ResPacketHeader.html  trait.AsBytes.html  trait.FromBytes.html  trait.FromZeroes.html
docs/memcached_network_types/prelude/: enum.BigEndian.html  enum.LittleEndian.html  index.html  macro.include_value.html  macro.transmute.html  macro.transmute_mut.html  macro.transmute_ref.html  sidebar-items.js  struct.F32.html  struct.F64.html  struct.I128.html  struct.I16.html  struct.I32.html  struct.I64.html  struct.Ptr.html  struct.Ref.html  struct.U128.html  struct.U16.html  struct.U32.html  struct.U64.html  struct.Unalign.html  trait.AsBytes.html  trait.ByteOrder.html  trait.ByteSlice.html  trait.ByteSliceMut.html  trait.FromBytes.html  trait.FromZeroes.html  trait.Unaligned.html  type.BE.html  type.LE.html  type.NativeEndian.html  type.NetworkEndian.html
fuzz/: Cargo.toml
fuzz/fuzz_targets/: binary_req_packet_header.rs  binary_res_packet_header.rs
src/: binary.rs  lib.rs  udp.rs
(+99 files in other folders)
