[package]
name = "memcached-network-types"
description = "Provides types for memcached protocol entities used for sending requests and responses over the network."
license = "MIT"
repository = "https://github.com/arindas/memcached-network-types"
keywords = ["memcached", "nostd", "network", "packet-parsing"]
categories = ["network-programming"]
version = "0.1.1"
edition = "2021"

[dependencies]
zerocopy = "0.7.35"
zerocopy-derive = "0.7.35"

