[package]
name = "memcached-network-types-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.memcached-network-types]
path = ".."

[[bin]]
name = "binary_req_packet_header"
path = "fuzz_targets/binary_req_packet_header.rs"
test = false
doc = false
bench = false

[[bin]]
name = "binary_res_packet_header"
path = "fuzz_targets/binary_res_packet_header.rs"
test = false
doc = false
bench = false
